--- a/Views/Draft/Create.cshtml
+++ b/Views/Draft/Create.cshtml
@@ -40,63 +40,69 @@
             </div>
             <div class="form-group">
                 <label name="RightDefender" class="control-label">Right Defender</label>
-                <select class="form-control" name="RightDefenderId">
+                <select asp-for="RightDefenderId" class="form-control" name="RightDefenderId">
                     <option value="" selected disabled hidden>Choose here</option>
                     <option value="@Model.RightDefenders[0].Id">@Model.RightDefenders[0].FisrtName @Model.RightDefenders[0].LastName</option>
                     <option value="@Model.RightDefenders[1].Id">@Model.RightDefenders[1].FisrtName @Model.RightDefenders[1].LastName</option>
                     <option value="@Model.RightDefenders[2].Id">@Model.RightDefenders[2].FisrtName @Model.RightDefenders[2].LastName</option> 
                     <option value="@Model.RightDefenders[3].Id">@Model.RightDefenders[3].FisrtName @Model.RightDefenders[3].LastName</option> 
                 </select>
+                 <span asp-validation-for="RightDefenderId" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label name="LeftMidfielder" class="control-label">Left Midfielder</label>
-                <select class="form-control" name="LeftMidfielderId">
+                <select asp-for="LeftMidfielderId" class="form-control" name="LeftMidfielderId">
                     <option value="" selected disabled hidden>Choose here</option>
                     <option value="@Model.LeftMidfielders[0].Id">@Model.LeftMidfielders[0].FisrtName @Model.LeftMidfielders[0].LastName</option>
                     <option value="@Model.LeftMidfielders[1].Id">@Model.LeftMidfielders[1].FisrtName @Model.LeftMidfielders[1].LastName</option>
                     <option value="@Model.LeftMidfielders[2].Id">@Model.LeftMidfielders[2].FisrtName @Model.LeftMidfielders[2].LastName</option> 
                     <option value="@Model.LeftMidfielders[3].Id">@Model.LeftMidfielders[3].FisrtName @Model.LeftMidfielders[3].LastName</option> 
                 </select>
+                 <span asp-validation-for="LeftMidfielderId" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label name="RightMidfielder" class="control-label">Right Midfileder</label>
-                <select class="form-control" name="RightMidfielderId">
+                <select asp-for="RightMidfielderId" class="form-control" name="RightMidfielderId">
                     <option value="" selected disabled hidden>Choose here</option>
                     <option value="@Model.RightMidfielders[0].Id">@Model.RightMidfielders[0].FisrtName @Model.RightMidfielders[0].LastName</option>
                     <option value="@Model.RightMidfielders[1].Id">@Model.RightMidfielders[1].FisrtName @Model.RightMidfielders[1].LastName</option>
                     <option value="@Model.RightMidfielders[2].Id">@Model.RightMidfielders[2].FisrtName @Model.RightMidfielders[2].LastName</option> 
                     <option value="@Model.RightMidfielders[3].Id">@Model.RightMidfielders[3].FisrtName @Model.RightMidfielders[3].LastName</option> 
                 </select>
+                 <span asp-validation-for="RightMidfielderId" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label name="LeftForwards" class="control-label">Left Forwards</label>
-                <select class="form-control" name="LeftForwardId">
+                <select asp-for="LeftForwardId" class="form-control" name="LeftForwardId">
                     <option value="" selected disabled hidden>Choose here</option>
                     <option value="@Model.LeftForwards[0].Id">@Model.LeftForwards[0].FisrtName @Model.LeftForwards[0].LastName</option>
                     <option value="@Model.LeftForwards[1].Id">@Model.LeftForwards[1].FisrtName @Model.LeftForwards[1].LastName</option>
                     <option value="@Model.LeftForwards[2].Id">@Model.LeftForwards[2].FisrtName @Model.LeftForwards[2].LastName</option>
                     <option value="@Model.LeftForwards[3].Id">@Model.LeftForwards[3].FisrtName @Model.LeftForwards[3].LastName</option>
                 </select>
+                 <span asp-validation-for="LeftForwardId" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label name="RightForwards" class="control-label">Right Forwards</label>
-                <select class="form-control" name="RightForwardId">
+                <select asp-for="RightForwardId" class="form-control" name="RightForwardId">
                     <option value="" selected disabled hidden>Choose here</option>
                     <option value="@Model.RightForwards[0].Id">@Model.RightForwards[0].FisrtName @Model.RightForwards[0].LastName</option>
                     <option value="@Model.RightForwards[1].Id">@Model.RightForwards[1].FisrtName @Model.RightForwards[1].LastName</option>
                     <option value="@Model.RightForwards[2].Id">@Model.RightForwards[2].FisrtName @Model.RightForwards[2].LastName</option> 
                     <option value="@Model.RightForwards[3].Id">@Model.RightForwards[3].FisrtName @Model.RightForwards[3].LastName</option> 
                 </select>
+                 <span asp-validation-for="RightForwardId" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label name="Managers" class="control-label">Managers</label>
-                <select class="form-control" name="ManagerId">
+                <select asp-for="ManagerId" class="form-control" name="ManagerId">
                     <option value="" selected disabled hidden>Choose here</option>
                     <option value="@Model.Managers[0].Id">@Model.Managers[0].FisrtName @Model.Managers[0].LastName</option>
                     <option value="@Model.Managers[1].Id">@Model.Managers[1].FisrtName @Model.Managers[1].LastName</option>
                     <option value="@Model.Managers[2].Id">@Model.Managers[2].FisrtName @Model.Managers[2].LastName</option> 
                     <option value="@Model.Managers[3].Id">@Model.Managers[3].FisrtName @Model.Managers[3].LastName</option> 
                 </select>
+                 <span asp-validation-for="ManagerId" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
