--- a/Views/Player/Create.cshtml
+++ b/Views/Player/Create.cshtml
@@ -8,17 +8,17 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="FisrtName" class="control-label"></label>
-                <input class="form-control" name="first_name"/>
+                <input asp-for="FisrtName" class="form-control" name="first_name"/>
                 <span asp-validation-for="FisrtName" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="LastName" class="control-label"></label>
-                <input class="form-control" name="last_name"/>
+                <input asp-for="LastName" class="form-control" name="last_name"/>
                 <span asp-validation-for="LastName" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Position" class="control-label"></label>
-                <select class="form-control" name="position">
+                <select asp-for="Position" class="form-control" name="position">
                     <option value="" selected disabled hidden>Choose here</option>
                     <option value="Goalkeeper">Goalkeeper</option>
                     <option value="Defender">Defender</option>
@@ -29,17 +29,17 @@
             </div>
             <div class="form-group">
                 <label asp-for="Age" class="control-label"></label>
-                <input class="form-control" name="age" />
+                <input asp-for="Age" class="form-control" name="age" />
                 <span asp-validation-for="Age" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="ShirtNumber" class="control-label"></label>
-                <input class="form-control" name="shirtnumber" />
+                <input asp-for="ShirtNumber" class="form-control" name="shirtnumber" />
                 <span asp-validation-for="ShirtNumber" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="NationalityId" class="control-label"></label>
-                <select class="form-control" name="nationalityId">
+                <select asp-for="NationalityId" class="form-control" name="nationalityId">
                     <option value="" selected disabled hidden>Choose here</option>
                     @foreach(var item in Model.Nations)
                     {
@@ -50,7 +50,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="ClubId" class="control-label"></label>
-                <select class="form-control" name="clubId">
+                <select asp-for="ClubId" class="form-control" name="clubId">
                     <option value="" selected disabled hidden>Choose here</option>
                     @foreach(var item in Model.Clubs)
                     {
@@ -61,7 +61,7 @@
             </div>                       
             <div class="form-group">
                 <label asp-for="Overall" class="control-label"></label>
-                <input class="form-control" name="overall"/>
+                <input asp-for="Overall" class="form-control" name="overall"/>
                 <span asp-validation-for="Overall" class="text-danger"></span>
             </div>
             <div class="form-group form-check">
