Created Dream Team

--- a/Views/DreamTeam/Details.cshtml
+++ b/Views/DreamTeam/Details.cshtml
@@ -1,7 +1,7 @@
-﻿@model FutManager.Models.Draft
+﻿@model FutManager.Models.DreamTeam
 
 <div>
-    <h4>Draft</h4>
+    <h4>DreamTeam</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
