fixed some issues

--- a/Views/Draft/Details.cshtml
+++ b/Views/Draft/Details.cshtml
@@ -26,49 +26,49 @@
             Goalkeeper
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Goalkeeper.FisrtName) @Html.DisplayFor(model => model.Goalkeeper.LastName)
+            @Html.DisplayFor(model => model.Goalkeeper.FirstName) @Html.DisplayFor(model => model.Goalkeeper.LastName)
         </dd>
         <dt class = "col-sm-2">
             Left Defender
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.LeftDefender.FisrtName) @Html.DisplayFor(model => model.LeftDefender.LastName)
+            @Html.DisplayFor(model => model.LeftDefender.FirstName) @Html.DisplayFor(model => model.LeftDefender.LastName)
         </dd>
         <dt class = "col-sm-2">
             Right Defender
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.RightDefender.FisrtName) @Html.DisplayFor(model => model.RightDefender.LastName) 
+            @Html.DisplayFor(model => model.RightDefender.FirstName) @Html.DisplayFor(model => model.RightDefender.LastName) 
         </dd>
         <dt class = "col-sm-2">
             Left Midfielder
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.LeftMidfielder.FisrtName) @Html.DisplayFor(model => model.LeftMidfielder.LastName)
+            @Html.DisplayFor(model => model.LeftMidfielder.FirstName) @Html.DisplayFor(model => model.LeftMidfielder.LastName)
         </dd>
         <dt class = "col-sm-2">
             Right Midfielder
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.RightMidfielder.FisrtName) @Html.DisplayFor(model => model.RightMidfielder.LastName) 
+            @Html.DisplayFor(model => model.RightMidfielder.FirstName) @Html.DisplayFor(model => model.RightMidfielder.LastName) 
         </dd>
         <dt class = "col-sm-2">
             Left Forward
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.LeftForward.FisrtName) @Html.DisplayFor(model => model.LeftForward.LastName)
+            @Html.DisplayFor(model => model.LeftForward.FirstName) @Html.DisplayFor(model => model.LeftForward.LastName)
         </dd>
         <dt class = "col-sm-2">
             Right Forward
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.RightForward.FisrtName) @Html.DisplayFor(model => model.RightForward.LastName)
+            @Html.DisplayFor(model => model.RightForward.FirstName) @Html.DisplayFor(model => model.RightForward.LastName)
         </dd>
         <dt class = "col-sm-2">
             Manager
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Manager.FisrtName) @Html.DisplayFor(model => model.Manager.LastName)
+            @Html.DisplayFor(model => model.Manager.FirstName) @Html.DisplayFor(model => model.Manager.LastName)
         </dd>
     </dl>
 </div>
