--- a/Views/Draft/Index.cshtml
+++ b/Views/Draft/Index.cshtml
@@ -49,28 +49,28 @@
                 @Html.DisplayFor(modelItem => item.Creator)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Goalkeeper.FisrtName) @Html.DisplayFor(modelItem => item.Goalkeeper.LastName)
+                @Html.DisplayFor(modelItem => item.Goalkeeper.FirstName) @Html.DisplayFor(modelItem => item.Goalkeeper.LastName)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.LeftDefender.FisrtName) @Html.DisplayFor(modelItem => item.LeftDefender.LastName)
+                @Html.DisplayFor(modelItem => item.LeftDefender.FirstName) @Html.DisplayFor(modelItem => item.LeftDefender.LastName)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.RightDefender.FisrtName) @Html.DisplayFor(modelItem => item.RightDefender.LastName)
+                @Html.DisplayFor(modelItem => item.RightDefender.FirstName) @Html.DisplayFor(modelItem => item.RightDefender.LastName)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.LeftMidfielder.FisrtName) @Html.DisplayFor(modelItem => item.LeftMidfielder.LastName)
+                @Html.DisplayFor(modelItem => item.LeftMidfielder.FirstName) @Html.DisplayFor(modelItem => item.LeftMidfielder.LastName)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.RightMidfielder.FisrtName) @Html.DisplayFor(modelItem => item.RightMidfielder.LastName)
+                @Html.DisplayFor(modelItem => item.RightMidfielder.FirstName) @Html.DisplayFor(modelItem => item.RightMidfielder.LastName)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.LeftForward.FisrtName) @Html.DisplayFor(modmodelItemel => item.LeftForward.LastName)
+                @Html.DisplayFor(modelItem => item.LeftForward.FirstName) @Html.DisplayFor(modmodelItemel => item.LeftForward.LastName)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.RightForward.FisrtName) @Html.DisplayFor(modelItem => item.RightForward.LastName)
+                @Html.DisplayFor(modelItem => item.RightForward.FirstName) @Html.DisplayFor(modelItem => item.RightForward.LastName)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Manager.FisrtName) @Html.DisplayFor(modelItem => item.Manager.LastName)
+                @Html.DisplayFor(modelItem => item.Manager.FirstName) @Html.DisplayFor(modelItem => item.Manager.LastName)
             </td>
             <td>
                 @Html.ActionLink("Details", "Details", new { item.Id}) |
