--- a/Views/Player/Delete.cshtml
+++ b/Views/Player/Delete.cshtml
@@ -1,5 +1,5 @@
 ﻿@model FutManager.Models.Player
-<h4>Are you sure you want to delete @Model.FisrtName @Model.LastName?</h4>
+<h4>Are you sure you want to delete @Model.FirstName @Model.LastName?</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
