--- a/Views/Draft/Create.cshtml
+++ b/Views/Draft/Create.cshtml
@@ -20,10 +20,10 @@
                 <label name="Goalkeeper" class="control-label">Goalkeeper</label>
                 <select asp-for="GoalkeeperId" class="form-control" name="GoalkeeperId">
                     <option value="" selected disabled hidden>Choose here</option>
-                    <option value="@Model.GoalKeepers[0].Id">@Model.GoalKeepers[0].FisrtName @Model.GoalKeepers[0].LastName</option>
-                    <option value="@Model.GoalKeepers[1].Id">@Model.GoalKeepers[1].FisrtName @Model.GoalKeepers[1].LastName</option>
-                    <option value="@Model.GoalKeepers[2].Id">@Model.GoalKeepers[2].FisrtName @Model.GoalKeepers[2].LastName</option> 
-                    <option value="@Model.GoalKeepers[3].Id">@Model.GoalKeepers[3].FisrtName @Model.GoalKeepers[3].LastName</option>                    
+                    <option value="@Model.GoalKeepers[0].Id">@Model.GoalKeepers[0].FirstName @Model.GoalKeepers[0].LastName</option>
+                    <option value="@Model.GoalKeepers[1].Id">@Model.GoalKeepers[1].FirstName @Model.GoalKeepers[1].LastName</option>
+                    <option value="@Model.GoalKeepers[2].Id">@Model.GoalKeepers[2].FirstName @Model.GoalKeepers[2].LastName</option> 
+                    <option value="@Model.GoalKeepers[3].Id">@Model.GoalKeepers[3].FirstName @Model.GoalKeepers[3].LastName</option>                    
                 </select>
                 <span asp-validation-for="GoalkeeperId" class="text-danger"></span>
             </div>
@@ -31,10 +31,10 @@
                 <label name="LeftDefender" class="control-label">Left Defender</label>
                 <select asp-for="LeftDefenderId" class="form-control" name="LeftDefenderId">
                     <option value="" selected disabled hidden>Choose here</option>
-                    <option value="@Model.LeftDefenders[0].Id">@Model.LeftDefenders[0].FisrtName @Model.LeftDefenders[0].LastName</option>
-                    <option value="@Model.LeftDefenders[1].Id">@Model.LeftDefenders[1].FisrtName @Model.LeftDefenders[1].LastName</option>
-                    <option value="@Model.LeftDefenders[2].Id">@Model.LeftDefenders[2].FisrtName @Model.LeftDefenders[2].LastName</option> 
-                    <option value="@Model.LeftDefenders[3].Id">@Model.LeftDefenders[3].FisrtName @Model.LeftDefenders[3].LastName</option> 
+                    <option value="@Model.LeftDefenders[0].Id">@Model.LeftDefenders[0].FirstName @Model.LeftDefenders[0].LastName</option>
+                    <option value="@Model.LeftDefenders[1].Id">@Model.LeftDefenders[1].FirstName @Model.LeftDefenders[1].LastName</option>
+                    <option value="@Model.LeftDefenders[2].Id">@Model.LeftDefenders[2].FirstName @Model.LeftDefenders[2].LastName</option> 
+                    <option value="@Model.LeftDefenders[3].Id">@Model.LeftDefenders[3].FirstName @Model.LeftDefenders[3].LastName</option> 
                 </select>
                 <span asp-validation-for="LeftDefenderId" class="text-danger"></span>
             </div>
@@ -42,10 +42,10 @@
                 <label name="RightDefender" class="control-label">Right Defender</label>
                 <select asp-for="RightDefenderId" class="form-control" name="RightDefenderId">
                     <option value="" selected disabled hidden>Choose here</option>
-                    <option value="@Model.RightDefenders[0].Id">@Model.RightDefenders[0].FisrtName @Model.RightDefenders[0].LastName</option>
-                    <option value="@Model.RightDefenders[1].Id">@Model.RightDefenders[1].FisrtName @Model.RightDefenders[1].LastName</option>
-                    <option value="@Model.RightDefenders[2].Id">@Model.RightDefenders[2].FisrtName @Model.RightDefenders[2].LastName</option> 
-                    <option value="@Model.RightDefenders[3].Id">@Model.RightDefenders[3].FisrtName @Model.RightDefenders[3].LastName</option> 
+                    <option value="@Model.RightDefenders[0].Id">@Model.RightDefenders[0].FirstName @Model.RightDefenders[0].LastName</option>
+                    <option value="@Model.RightDefenders[1].Id">@Model.RightDefenders[1].FirstName @Model.RightDefenders[1].LastName</option>
+                    <option value="@Model.RightDefenders[2].Id">@Model.RightDefenders[2].FirstName @Model.RightDefenders[2].LastName</option> 
+                    <option value="@Model.RightDefenders[3].Id">@Model.RightDefenders[3].FirstName @Model.RightDefenders[3].LastName</option> 
                 </select>
                  <span asp-validation-for="RightDefenderId" class="text-danger"></span>
             </div>
@@ -53,10 +53,10 @@
                 <label name="LeftMidfielder" class="control-label">Left Midfielder</label>
                 <select asp-for="LeftMidfielderId" class="form-control" name="LeftMidfielderId">
                     <option value="" selected disabled hidden>Choose here</option>
-                    <option value="@Model.LeftMidfielders[0].Id">@Model.LeftMidfielders[0].FisrtName @Model.LeftMidfielders[0].LastName</option>
-                    <option value="@Model.LeftMidfielders[1].Id">@Model.LeftMidfielders[1].FisrtName @Model.LeftMidfielders[1].LastName</option>
-                    <option value="@Model.LeftMidfielders[2].Id">@Model.LeftMidfielders[2].FisrtName @Model.LeftMidfielders[2].LastName</option> 
-                    <option value="@Model.LeftMidfielders[3].Id">@Model.LeftMidfielders[3].FisrtName @Model.LeftMidfielders[3].LastName</option> 
+                    <option value="@Model.LeftMidfielders[0].Id">@Model.LeftMidfielders[0].FirstName @Model.LeftMidfielders[0].LastName</option>
+                    <option value="@Model.LeftMidfielders[1].Id">@Model.LeftMidfielders[1].FirstName @Model.LeftMidfielders[1].LastName</option>
+                    <option value="@Model.LeftMidfielders[2].Id">@Model.LeftMidfielders[2].FirstName @Model.LeftMidfielders[2].LastName</option> 
+                    <option value="@Model.LeftMidfielders[3].Id">@Model.LeftMidfielders[3].FirstName @Model.LeftMidfielders[3].LastName</option> 
                 </select>
                  <span asp-validation-for="LeftMidfielderId" class="text-danger"></span>
             </div>
@@ -64,10 +64,10 @@
                 <label name="RightMidfielder" class="control-label">Right Midfileder</label>
                 <select asp-for="RightMidfielderId" class="form-control" name="RightMidfielderId">
                     <option value="" selected disabled hidden>Choose here</option>
-                    <option value="@Model.RightMidfielders[0].Id">@Model.RightMidfielders[0].FisrtName @Model.RightMidfielders[0].LastName</option>
-                    <option value="@Model.RightMidfielders[1].Id">@Model.RightMidfielders[1].FisrtName @Model.RightMidfielders[1].LastName</option>
-                    <option value="@Model.RightMidfielders[2].Id">@Model.RightMidfielders[2].FisrtName @Model.RightMidfielders[2].LastName</option> 
-                    <option value="@Model.RightMidfielders[3].Id">@Model.RightMidfielders[3].FisrtName @Model.RightMidfielders[3].LastName</option> 
+                    <option value="@Model.RightMidfielders[0].Id">@Model.RightMidfielders[0].FirstName @Model.RightMidfielders[0].LastName</option>
+                    <option value="@Model.RightMidfielders[1].Id">@Model.RightMidfielders[1].FirstName @Model.RightMidfielders[1].LastName</option>
+                    <option value="@Model.RightMidfielders[2].Id">@Model.RightMidfielders[2].FirstName @Model.RightMidfielders[2].LastName</option> 
+                    <option value="@Model.RightMidfielders[3].Id">@Model.RightMidfielders[3].FirstName @Model.RightMidfielders[3].LastName</option> 
                 </select>
                  <span asp-validation-for="RightMidfielderId" class="text-danger"></span>
             </div>
@@ -75,10 +75,10 @@
                 <label name="LeftForwards" class="control-label">Left Forwards</label>
                 <select asp-for="LeftForwardId" class="form-control" name="LeftForwardId">
                     <option value="" selected disabled hidden>Choose here</option>
-                    <option value="@Model.LeftForwards[0].Id">@Model.LeftForwards[0].FisrtName @Model.LeftForwards[0].LastName</option>
-                    <option value="@Model.LeftForwards[1].Id">@Model.LeftForwards[1].FisrtName @Model.LeftForwards[1].LastName</option>
-                    <option value="@Model.LeftForwards[2].Id">@Model.LeftForwards[2].FisrtName @Model.LeftForwards[2].LastName</option>
-                    <option value="@Model.LeftForwards[3].Id">@Model.LeftForwards[3].FisrtName @Model.LeftForwards[3].LastName</option>
+                    <option value="@Model.LeftForwards[0].Id">@Model.LeftForwards[0].FirstName @Model.LeftForwards[0].LastName</option>
+                    <option value="@Model.LeftForwards[1].Id">@Model.LeftForwards[1].FirstName @Model.LeftForwards[1].LastName</option>
+                    <option value="@Model.LeftForwards[2].Id">@Model.LeftForwards[2].FirstName @Model.LeftForwards[2].LastName</option>
+                    <option value="@Model.LeftForwards[3].Id">@Model.LeftForwards[3].FirstName @Model.LeftForwards[3].LastName</option>
                 </select>
                  <span asp-validation-for="LeftForwardId" class="text-danger"></span>
             </div>
@@ -86,10 +86,10 @@
                 <label name="RightForwards" class="control-label">Right Forwards</label>
                 <select asp-for="RightForwardId" class="form-control" name="RightForwardId">
                     <option value="" selected disabled hidden>Choose here</option>
-                    <option value="@Model.RightForwards[0].Id">@Model.RightForwards[0].FisrtName @Model.RightForwards[0].LastName</option>
-                    <option value="@Model.RightForwards[1].Id">@Model.RightForwards[1].FisrtName @Model.RightForwards[1].LastName</option>
-                    <option value="@Model.RightForwards[2].Id">@Model.RightForwards[2].FisrtName @Model.RightForwards[2].LastName</option> 
-                    <option value="@Model.RightForwards[3].Id">@Model.RightForwards[3].FisrtName @Model.RightForwards[3].LastName</option> 
+                    <option value="@Model.RightForwards[0].Id">@Model.RightForwards[0].FirstName @Model.RightForwards[0].LastName</option>
+                    <option value="@Model.RightForwards[1].Id">@Model.RightForwards[1].FirstName @Model.RightForwards[1].LastName</option>
+                    <option value="@Model.RightForwards[2].Id">@Model.RightForwards[2].FirstName @Model.RightForwards[2].LastName</option> 
+                    <option value="@Model.RightForwards[3].Id">@Model.RightForwards[3].FirstName @Model.RightForwards[3].LastName</option> 
                 </select>
                  <span asp-validation-for="RightForwardId" class="text-danger"></span>
             </div>
@@ -97,10 +97,10 @@
                 <label name="Managers" class="control-label">Managers</label>
                 <select asp-for="ManagerId" class="form-control" name="ManagerId">
                     <option value="" selected disabled hidden>Choose here</option>
-                    <option value="@Model.Managers[0].Id">@Model.Managers[0].FisrtName @Model.Managers[0].LastName</option>
-                    <option value="@Model.Managers[1].Id">@Model.Managers[1].FisrtName @Model.Managers[1].LastName</option>
-                    <option value="@Model.Managers[2].Id">@Model.Managers[2].FisrtName @Model.Managers[2].LastName</option> 
-                    <option value="@Model.Managers[3].Id">@Model.Managers[3].FisrtName @Model.Managers[3].LastName</option> 
+                    <option value="@Model.Managers[0].Id">@Model.Managers[0].FirstName @Model.Managers[0].LastName</option>
+                    <option value="@Model.Managers[1].Id">@Model.Managers[1].FirstName @Model.Managers[1].LastName</option>
+                    <option value="@Model.Managers[2].Id">@Model.Managers[2].FirstName @Model.Managers[2].LastName</option> 
+                    <option value="@Model.Managers[3].Id">@Model.Managers[3].FirstName @Model.Managers[3].LastName</option> 
                 </select>
                  <span asp-validation-for="ManagerId" class="text-danger"></span>
             </div>
