--- a/Views/Manager/Create.cshtml
+++ b/Views/Manager/Create.cshtml
@@ -8,23 +8,23 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                
-                <label asp-for="FisrtName" class="control-label"></label>
-                <input  asp-for="FisrtName" class="form-control" name="first_name"/>
-                <span asp-validation-for="FisrtName" class="text-danger"></span>
+                <label asp-for="FirstName" class="control-label"></label>
+                <input  asp-for="FirstName" class="form-control" name="FirstName"/>
+                <span asp-validation-for="FirstName" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="LastName" class="control-label"></label>
-                <input  asp-for="LastName" class="form-control" name="last_name"/>
+                <input  asp-for="LastName" class="form-control" name="LastName"/>
                 <span asp-validation-for="LastName" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Age" class="control-label"></label>
-                <input asp-for="Age" class="form-control" name="age" />
+                <input asp-for="Age" class="form-control" name="Age" />
                 <span asp-validation-for="Age" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label name="Nationality" class="control-label">Nationality</label>
-                <select asp-for="NationalityId" class="form-control" name="nationalityId">
+                <select asp-for="NationalityId" class="form-control" name="NationalityId">
                     
                     <option value="" selected disabled hidden>Choose here</option>
                     @foreach(var item in Model.Nations)
@@ -36,7 +36,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="ClubId" class="control-label"></label>
-                 <select  asp-for="ClubId" class="form-control" name="clubId">
+                 <select  asp-for="ClubId" class="form-control" name="ClubId">
                     <option value="" selected disabled hidden>Choose here</option>
                     @foreach(var item in Model.Clubs)
                     {
@@ -47,7 +47,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="Rating" class="control-label"></label>
-                <input  asp-for="Rating" class="form-control" name="rating" />
+                <input  asp-for="Rating" class="form-control" name="Rating" />
                 <span asp-validation-for="Rating" class="text-danger"></span>
             </div>
             <div class="form-group form-check">
