--- a/Views/Manager/Edit.cshtml
+++ b/Views/Manager/Edit.cshtml
@@ -7,46 +7,46 @@
         <form asp-action="ConfirmEdit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>            
             <div class="form-group">
-                <label asp-for="manager.FisrtName" class="control-label"></label>
-                <input asp-for="manager.FisrtName" class="form-control" name="first_name"/>
-                <span asp-validation-for="manager.FisrtName" class="text-danger"></span>
+                <label asp-for="manager.FirstName" class="control-label"></label>
+                <input asp-for="manager.FirstName" class="form-control" name="FirstName"/>
+                <span asp-validation-for="FirstName" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="manager.LastName" class="control-label"></label>
-                <input asp-for="manager.LastName" class="form-control" name="last_name"/>
-                <span asp-validation-for="manager.LastName" class="text-danger"></span>
+                <input asp-for="manager.LastName" class="form-control" name="LastName"/>
+                <span asp-validation-for="LastName" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="manager.Age" class="control-label"></label>
-                <input asp-for="manager.Age" class="form-control" name="age"/>
-                <span asp-validation-for="manager.Age" class="text-danger"></span>
+                <input asp-for="manager.Age" class="form-control" name="Age"/>
+                <span asp-validation-for="Age" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="manager.NationalityId" class="control-label"></label>
-                <select asp-for="manager.NationalityId" class="form-control" name="nationalityId">
+                <select asp-for="manager.NationalityId" class="form-control" name="NationalityId">
                     <option value="" selected disabled hidden>Choose here</option>
                     @foreach(var item in Model.Nations)
                     {
                         <option value="@item.Id">@item.Name</option>
                     }
                 </select>
-                <span asp-validation-for="manager.NationalityId" class="text-danger"></span>
+                <span asp-validation-for="NationalityId" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="manager.ClubId" class="control-label"></label>
-                <select asp-for="manager.ClubId" class="form-control" name="clubId">
+                <select asp-for="manager.ClubId" class="form-control" name="ClubId">
                     <option value="" selected disabled hidden>Choose here</option>
                     @foreach(var item in Model.Clubs)
                     {
                         <option value="@item.Id">@item.Name</option>
                     }
                 </select>
-                <span asp-validation-for="manager.ClubId" class="text-danger"></span>
+                <span asp-validation-for="ClubId" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="manager.Rating" class="control-label"></label>
-                <input asp-for="manager.Rating" class="form-control" name="rating"/>
-                <span asp-validation-for="manager.Rating" class="text-danger"></span>
+                <input asp-for="manager.Rating" class="form-control" name="Rating"/>
+                <span asp-validation-for="Rating" class="text-danger"></span>
             </div>
             <div class="form-group form-check">
                 <label class="form-check-label">
