--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -3,6 +3,11 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1>Welcome</h1>
+    <div>
+        <h2>This is a simple app where you can create drafts and dreamteams from a list of players.</h2>
+    </div>
+    <div>
+        <img src="./image.jpg" alt="Mohamed Salad"/>
+    </div>
 </div>
